@@ -35,6 +35,7 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC4476 providing Attribute Certificate Policies Extension
 - Add RFC5636 providing Traceable Anonymous Certificate
 - Add RFC5752 providing Multiple Signatures attribute for CMS
+- Add RFC5275 providing CMS Symmetric Key Management and Distribution
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
